--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,4 @@ build*
 
 xcode/tiny_cnn.xcodeproj/project.xcworkspace/xcuserdata
 xcode/tiny_cnn.xcodeproj/xcuserdata
+xcode/tiny_cnn.xcodeproj/project.xcworkspace
